--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: cpp
-compiler:
-    - clang
-    - gcc
+env:
+    - STATSD_COMPILE_MODE=Debug
+    # - STATSD_COMPILE_MODE=Release
+branches:
+  only: 
+    - master
 addons:
   apt:
     sources:
@@ -13,29 +16,35 @@ addons:
 #      - valgrind
       - cppcheck
       - build-essential
-env:
-    - STATSD_COMPILE_MODE=Debug
-    - STATSD_COMPILE_MODE=Release
-branches:
-  only: 
-    - master
-os:
-    - linux
-    - osx
-    - windows
-matrix:
-    allow_failures:
-        - os: windows
 before_install:
 - |-
     case $TRAVIS_OS_NAME in
       windows)
-        choco install make cmake cppcheck
+        choco install visualstudio2019buildtools --package-parameters "--includeRecommended --includeOptional"
+        choco install make cmake cppcheck tree visualstudio2017-workload-vctools mingw
         ;;
       linux)
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 50
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 50
         ;;
     esac
-script: make test STATSD_COMPILE_MODE=$STATSD_COMPILE_MODE
-after_script: make lint
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      script: make test STATSD_COMPILE_MODE=$STATSD_COMPILE_MODE
+      after_script: make lint
+    - os: osx
+      osx_image: xcode10
+      script: make test STATSD_COMPILE_MODE=$STATSD_COMPILE_MODE
+      after_script: make lint
+    - os: windows
+      compiler: msvc19
+      script: 
+        - mkdir build && cd build
+        - cmake -DCMAKE_BUILD_TYPE=$STATSD_COMPILE_MODE  ..
+        - cmake --build .
+        - tree
+        - ./bin/$STATSD_COMPILE_MODE/statsd-test.exe
+  allow_failures:
+        - os: windows
